--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "author": "nakul",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "pg": "^8.11.0"
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.0",
+    "uuid": "^9.0.0"
   }
 }
